Sistemazione bug rimozione utente. sistemazione scrollbar y e x scroll

--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -205,7 +205,7 @@ a, a:visited {
         .footer-button ul.catalog-list li {
             border: none;
             background: #0d1d41;
-            padding:12px 0px;
+            padding:0px;
             width:100%;
             display: block;
             text-align:center;
@@ -213,6 +213,10 @@ a, a:visited {
             text-transform: uppercase;
             font-weight: bold;
         }
+
+            .footer-button ul.catalog-list li div {
+                padding:12px 0px;
+            }
 
         .footer-button ul.catalog-list li:last-child {
             border-bottom: 0px solid #545454;
@@ -239,7 +243,7 @@ a, a:visited {
         ul.category-list li, ul.catalog-list-int li {
             border: none;
             background: #ffffff;
-            padding:12px 10px;
+            padding:0px;
             width:100%;
             display: block;
             text-align:left;
@@ -248,7 +252,11 @@ a, a:visited {
             font-weight: bold;
         }
 
-            ul.category-list li small, ul.catalog-list-int li small {
+            ul.category-list li div, ul.catalog-list-int li div {
+                padding: 12px 10px;
+            }
+
+            ul.category-list li div small, ul.catalog-list-int li small {
                 display: block;
                 font-size: 11px;
                 font-weight: normal;
@@ -359,7 +367,7 @@ a, a:visited {
         border-radius: 3px;
     }
 
-    .content-page .userRole.Proprietario {
+    .content-page .userRole.proprietario {
         background: #fab14a;
         color: #000000;
     }
@@ -430,6 +438,11 @@ a, a:visited {
         border-radius: 3px;
         margin-bottom: 10px;
         margin-top: 10px;
+    }
+
+    .formBlock button.rounded-button.oro {
+        background: #fab14a;
+        width:96%;
     }
 
 
@@ -793,7 +806,8 @@ li {
 
 #main-menu-dx ul.menu-lista {
     /*height: 400px;*/
-    overflow: scroll;
+    overflow-y: auto;
+    overflow-x: none;
     margin: 0;
     padding: 0;
     list-style: none;
